# WG_Test

./: .gitignore  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/include/: Editor.h  LevelScene.h  LevelSceneObject.h  PropertyApply.h  PropertyDelegate.h  PropertyDeliver.h  PropertyPopulate.h  PropertyRequests.h  PropertyRoles.h
editor/resources/: Editor.ui
editor/source/: Editor.cpp  LevelScene.cpp  LevelSceneObject.cpp  PropertyApply.cpp  PropertyDelegate.cpp  PropertyDeliver.cpp  PropertyPopulate.cpp  main.cpp
game/: CMakeLists.txt
game/common/jsoncpp/lib/: lib_json.lib  lib_jsond.lib
game/include/game/: enviroment.h  forward.h  level.h  object.h  property.h  prototype.h  types.h
game/source/: enviroment.cpp  level.cpp  object.cpp  prototype.cpp
game/source/properties/: property_creators.cpp  property_creators.h  property_factory.cpp  property_factory.h  property_reader.cpp  property_reader.h  property_writer.cpp  property_writer.h
